# capmatch-dev

./: .dockerignore  .env.template  .gitignore  .tsprunerc  .vercelignore  Caddyfile  Dockerfile  MIGRATION_COMPLETE.md  MIGRATION_STATUS.md  ONLYOFFICE_POC_SETUP.md  PHASE2_COMPLETE.md  debug-permissions.js  docker-compose.yml  eslint.config.mjs  implementation_plan.md  jest.config.js  next.config.ts  package-lock.json  package.json  seed_output.txt  t12_template.xlsx  tailwind.config.ts  test_data.xlsx  test_t12_hierarchical.xlsx  tsc_output.txt  tsconfig.json  vitest.config.ts  vitest.setup.ts
gcp-services/scheduled/email-digest/: .env.example  Dockerfile  README.md  config.py  database.py  email_builder.py  email_sender.py  main.py  preferences.py  pyproject.toml  run.sh  setup-vm.sh
gcp-services/scheduled/email-digest/email-templates/: next.config.js  package-lock.json  render.tsx
gcp-services/scheduled/email-notifications/: Dockerfile  TESTING.md  config.py  database.py  deploy.sh  email_sender.py  main_hourly.py  pyproject.toml  run-hourly.sh  run-instant.sh  setup-vm.sh
gcp-services/scheduled/email-notifications/email-templates/: DigestEmail.tsx  package-lock.json  package.json  render.tsx  tsconfig.json
gcp-services/scheduled/email-notifications/email-templates/emails/: DigestEmail.tsx  InviteEmail.tsx
gcp-services/scheduled/notify-fan-out/: Dockerfile  README.md  config.py  database.py  handlers.py  helpers.py  main.py  pyproject.toml  requirements.txt  seed_test_events.py  setup-vm.sh
gcp-services/scheduled/renew-calendar-watches/: .env.example  README.md  config.py  main.py  pyproject.toml  run.sh  setup-vm.sh
(+1081 files in other folders)
