[project]
name = "notify-fan-out"
version = "0.1.0"
description = "GCP service for processing domain events and creating notifications"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.2.1",
    "postgrest-py>=0.18.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
